--- a/index.html
+++ b/index.html
@@ -1,46 +1,20 @@
 <!DOCTYPE html>
-<html lang="en"> <!-- Defines the document type and language as English -->
+<html lang="en">
 <head>
-    <meta charset="UTF-8"> <!-- Sets the character encoding to UTF-8 for compatibility -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Makes the website responsive on all devices -->
-    <title>Hackabury</title> <!-- Sets the title of the webpage displayed in the browser tab -->
-    <style> <!-- Starts the embedded CSS section -->
-        body { 
-            font-family: 'JetBrains Mono', monospace; /* Sets the font style to JetBrains Mono */
-            margin: 0; /* Removes the default margin */
-            padding: 0; /* Removes the default padding */
-            background-color: #f4f4f9; /* Sets the background color of the page */
-            color: #333; /* Sets the default text color */
-        }
-
-        header { 
-            background-color: #222; /* Sets the background color of the header */
-            color: #fff; /* Sets the text color of the header to white */
-            padding: 10px 20px; /* Adds padding inside the header for spacing */
-            text-align: center; /* Centers the text within the header */
-        }
-
-        main { 
-            padding: 20px; /* Adds padding to the main content area for spacing */
-        }
-
-        footer { 
-            background-color: #222; /* Sets the background color of the footer */
-            color: #fff; /* Sets the text color of the footer to white */
-            padding: 10px 20px; /* Adds padding inside the footer for spacing */
-            text-align: center; /* Centers the text within the footer */
-        }
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hackabury</title>
+    <link rel="stylesheet" href="style.css"> <!-- Links the external CSS file -->
 </head>
 <body>
-    <header> <!-- Defines the header section of the webpage -->
-        <h1>Hackabury</h1> <!-- Displays the main title of the webpage -->
+    <header>
+        <h1>Hackabury</h1>
     </header>
-    <main> <!-- Defines the main content section -->
-        <p>Welcome to Hackabury! Your platform for creativity and innovation.</p> <!-- A welcoming paragraph for visitors -->
+    <main>
+        <p>Welcome to Hackabury! Your platform for creativity and innovation.</p>
     </main>
-    <footer> <!-- Defines the footer section of the webpage -->
-        <p>&copy; 2025 Hackabury. All rights reserved.</p> <!-- Displays copyright information in the footer -->
+    <footer>
+        <p>&copy; 2025 Hackabury. All rights reserved.</p>
     </footer>
 </body>
 </html>
