--- a/index.html
+++ b/index.html
@@ -1,34 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> <!-- Defines the document type and language as English -->
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hackabury</title>
-    <link rel="stylesheet" href="style.css"> <!-- Links to the CSS file -->
+    <meta charset="UTF-8"> <!-- Sets the character encoding to UTF-8 for compatibility -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Ensures the page is responsive on all devices -->
+    <title>Hackabury</title> <!-- Sets the title of the webpage displayed in the browser tab -->
+    <link rel="stylesheet" href="style.css"> <!-- Links to the external CSS file -->
 </head>
 <body>
-    <header>
-        <h1>Hackabury</h1>
+    <header> <!-- The header section of the page -->
+        <h1>Hackabury</h1> <!-- Main title of the webpage -->
     </header>
-    <nav>
-        <!-- Navigation Tabs -->
-        <button class="tab-btn" data-tab="team">Meet the Team</button>
-        <button class="tab-btn" data-tab="faq">FAQ</button>
+    <nav> <!-- Navigation area containing buttons for different sections -->
+        <button class="tab-btn" data-tab="team">Meet the Team</button> <!-- Button to display 'Meet the Team' section -->
+        <button class="tab-btn" data-tab="faq">FAQ</button> <!-- Button to display 'FAQ' section -->
     </nav>
-    <main>
-        <!-- Sections for each tab -->
-        <section id="team" class="tab-content">
-            <h2>Meet the Team</h2>
-            <p>Learn about the amazing team behind Hackabury.</p>
+    <main> <!-- Main content section of the page -->
+        <section id="team" class="tab-content"> <!-- Content for the 'Meet the Team' section -->
+            <h2>Meet the Team</h2> <!-- Subheading for 'Meet the Team' -->
+            <p>Learn about the amazing team behind Hackabury.</p> <!-- Descriptive paragraph for this section -->
         </section>
-        <section id="faq" class="tab-content hidden">
-            <h2>FAQ</h2>
-            <p>Find answers to common questions about Hackabury.</p>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2025 Hackabury. All rights reserved.</p>
-    </footer>
-    <script src="script.js"></script> <!-- Links to the JavaScript file -->
-</body>
-</html>
+        <section id="faq" class="tab-content hidden"> <!-- Content for the 'FAQ' section, initially hidden -->
+
