--- a/index.html
+++ b/index.html
@@ -20,4 +20,13 @@
             <p>Learn about the amazing team behind Hackabury.</p> <!-- Descriptive paragraph for this section -->
         </section>
         <section id="faq" class="tab-content hidden"> <!-- Content for the 'FAQ' section, initially hidden -->
-
+            <h2>FAQ</h2> <!-- Subheading for 'FAQ' -->
+            <p>Find answers to common questions about Hackabury.</p> <!-- Descriptive paragraph for this section -->
+        </section>
+    </main>
+    <footer> <!-- The footer section of the page -->
+        <p>&copy; 2025 Hackabury. All rights reserved.</p> <!-- Copyright information -->
+    </footer>
+    <script src="script.js"></script> <!-- Links to the external JavaScript file -->
+</body>
+</html>
