--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
         <h1>Hackabury</h1> <!-- Main title of the webpage -->
     </header>
     <nav> <!-- Navigation area containing buttons for different sections -->
+        <
         <button class="tab-btn" data-tab="team">Meet the Team</button> <!-- Button to display 'Meet the Team' section -->
         <button class="tab-btn" data-tab="faq">FAQ</button> <!-- Button to display 'FAQ' section -->
     </nav>
     <main> <!-- Main content section of the page -->
+        <section id="welcome" class="tab-content"> <!-- Default landing section -->
+            <h2>Welcome to Hackabury</h2>
+            <p>Hackabury is your platform for creativity and innovation. Explore our team and FAQs!</p>
+        </section>
         <section id="team" class="tab-content"> <!-- Content for the 'Meet the Team' section -->
             <h2>Meet the Team</h2> <!-- Subheading for 'Meet the Team' -->
             <p>Learn about the amazing team behind Hackabury.</p> <!-- Descriptive paragraph for this section -->
