--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Hackabury</h1> <!-- Main title of the webpage -->
     </header>
     <nav> <!-- Navigation area containing buttons for different sections -->
-        <
+        <button class="tab-btn" data-tab="welcome">Welcome</button> <!-- Button for Welcome section -->
         <button class="tab-btn" data-tab="team">Meet the Team</button> <!-- Button to display 'Meet the Team' section -->
         <button class="tab-btn" data-tab="faq">FAQ</button> <!-- Button to display 'FAQ' section -->
     </nav>
