--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         <section id="faq" class="tab-content hidden"> <!-- Content for the 'FAQ' section, initially hidden -->
             <h2>FAQ</h2> <!-- Subheading for 'FAQ' -->
             <p>Find answers to common questions about Hackabury.</p> <!-- Descriptive paragraph for this section -->
+            <p>Will we be fed?</p>
+            <p>There will be food provided on both days. We will serve pizza in the SU at 5pm on the Tue, you can then either go home and continue working together online or make plans to stay in a single location to carry on working, there is no expectation that you would stay overnight at uni - plus the building will close! But you are welcome to keep working!</p>
         </section>
     </main>
     <footer> <!-- The footer section of the page -->
