--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h2>Welcome to Hackabury</h2>
             <p>Hackabury is your platform for creativity and innovation. Explore our team and FAQs!</p>
         </section>
-        <section id="team" class="tab-content"> <!-- Content for the 'Meet the Team' section -->
+        <section id="team" class="tab-content hidden"> <!-- Content for the 'Meet the Team' section -->
             <h2>Meet the Team</h2> <!-- Subheading for 'Meet the Team' -->
             <p>Learn about the amazing team behind Hackabury.</p> <!-- Descriptive paragraph for this section -->
         </section>
