--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <section id="team" class="tab-content hidden"> <!-- Content for the 'Meet the Team' section -->
             <h2>Meet the Team</h2> <!-- Subheading for 'Meet the Team' -->
             <p>Learn about the amazing team behind Hackabury.</p> <!-- Descriptive paragraph for this section -->
+            <p>Benjamin</p>
+            <p>The one who created this website!</p>
         </section>
         <section id="faq" class="tab-content hidden"> <!-- Content for the 'FAQ' section, initially hidden -->
             <h2>FAQ</h2> <!-- Subheading for 'FAQ' -->
