--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <button class="tab-btn" data-tab="welcome">Welcome</button> <!-- Button for Welcome section -->
         <button class="tab-btn" data-tab="team">Meet the Team</button> <!-- Button to display 'Meet the Team' section -->
         <button class="tab-btn" data-tab="faq">FAQ</button> <!-- Button to display 'FAQ' section -->
+        <button class="tab-btn" data-tab="sponsors">Sponsors</button> <!-- Button to display 'Sponsors' section -->
     </nav>
     <main> <!-- Main content section of the page -->
         <section id="welcome" class="tab-content"> <!-- Default landing section -->
@@ -23,7 +24,7 @@
         <section id="team" class="tab-content hidden"> <!-- Content for the 'Meet the Team' section -->
             <h2>Meet the Team</h2> <!-- Subheading for 'Meet the Team' -->
             <p>Learn about the amazing team behind Hackabury.</p> <!-- Descriptive paragraph for this section -->
-            <p>Benjamin</p>
+            <h2>Benjamin</h2>
             <p>The one who created this website!</p>
         </section>
         <section id="faq" class="tab-content hidden"> <!-- Content for the 'FAQ' section, initially hidden -->
@@ -31,6 +32,10 @@
             <p>Find answers to common questions about Hackabury.</p> <!-- Descriptive paragraph for this section -->
             <p>Will we be fed?</p>
             <p>There will be food provided on both days. We will serve pizza in the SU at 5pm on the Tue, you can then either go home and continue working together online or make plans to stay in a single location to carry on working, there is no expectation that you would stay overnight at uni - plus the building will close! But you are welcome to keep working!</p>
+        </section>
+        <section>
+            <h2>Sponsors</h2>
+            <p>Learn more about the sponsors here!</p>
         </section>
     </main>
     <footer> <!-- The footer section of the page -->
