--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <button class="tab-btn" data-tab="faq">FAQ</button> <!-- Button to display 'FAQ' section -->
         <button class="tab-btn" data-tab="sponsors">Sponsors</button> <!-- Button to display 'Sponsors' section -->
         <button class="tab-btn" data-tab="conduct">Code of Conduct</button> <!-- Button to display 'Code of Conduct' section -->
+        <button class="tab-btn" data-tab="timer">Countdown Timer</button> <!-- Button to display 'Timer' section -->
     </nav>
     <main> <!-- Main content section of the page -->
         <section id="welcome" class="tab-content"> <!-- Default landing section -->
@@ -121,6 +122,13 @@
                 <li>Most of the campus is unavailable and off limits during the event. Security will also be on site.</li>
                 <li>Anyone not following the Hackabury Code of Conduct will be disqualified from any prizes.</li>
             </ul>
+
+        <section id="timer" class="tab-content hidden">
+            <h2>Countdown Timer</h2>
+            <h1>How long until Hackabury begins?</h1>
+            <body>
+                <p id="demo"></p>
+            </body>
             
     </main>
     <footer> <!-- The footer section of the page -->
