--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
             <h1>How long until Hackabury begins?</h1>
             <body>
                 <p id="demo"></p>
+                <script src="script.js" defer></script>
             </body>
             
     </main>
