--- a/index.html
+++ b/index.html
@@ -122,14 +122,15 @@
                 <li>Most of the campus is unavailable and off limits during the event. Security will also be on site.</li>
                 <li>Anyone not following the Hackabury Code of Conduct will be disqualified from any prizes.</li>
             </ul>
+        </section>
 
         <section id="timer" class="tab-content hidden">
             <h2>Countdown Timer</h2>
             <h1>How long until Hackabury begins?</h1>
             <body>
                 <p id="demo"></p>
-                <script src="script.js" defer></script>
             </body>
+        </section>
             
     </main>
     <footer> <!-- The footer section of the page -->
