--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <ul>
                 <li>You will find that out on the day.</li>
                 <li>But if you join the Discord...</li>
+                <li><a href="https://discord.gg/NSSPksXeKz" target="_blank">The Hackabury Discord Server</a>. </li>
                 <li>We will reveal who the sponsors are throughout the coming weeks!</li>
             </ul>
             
