Fix: Add missing addresses for Welcome page links.

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
             <h3>External links</h3>
             <ul>
-                <li>Sign up for Hackabury <a href="#">here</a> (hurry, the deadline to sign up is the 28th April!!)</li>
-                <li>Join the Hackabury Discord server <a href="#">here</a>.</li>
+                <li>Sign up for Hackabury <a href="https://www.canterbury.ac.uk/events/2025/hackabury-cccus-hackathongamesjam">here</a> (hurry, the deadline to sign up is the 28th April!!)</li>
+                <li>Join the Hackabury Discord server <a href="https://discord.gg/NSSPksXeKz">here</a>.</li>
             </ul>
         </section>
         
