--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             you can produce games during the time period too!</p>
             <p>For more information about Hackabury, check out our FAQ page.</p>
 
-            <h3>External links</h3>
+            <h3>External Links:</h3>
             <ul>
-                <li>Sign up for Hackabury <a href="https://www.canterbury.ac.uk/events/2025/hackabury-cccus-hackathongamesjam">here</a> (hurry, the deadline to sign up is the 28th April!!)</li>
+                <li>Sign up for Hackabury <a href="https://www.canterbury.ac.uk/events/2025/hackabury-cccus-hackathongamesjam">here</a> (Hurry, the deadline to sign up is the 28th April!!)</li>
                 <li>Join the Hackabury Discord server <a href="https://discord.gg/NSSPksXeKz">here</a>.</li>
             </ul>
         </section>
@@ -42,6 +42,8 @@
             <p>Learn about the amazing team behind Hackabury.</p> <!-- Descriptive paragraph for this section -->
             <h3>Benjamin</h3>
             <p>The one who created this website!</p>
+            <h3>Jess</h3>
+            <p>Helped with some of the functionality and quality of life improvements!</p>
         </section>
         
         <section id="faq" class="tab-content hidden"> <!-- Content for the 'FAQ' section, initially hidden -->
@@ -116,6 +118,17 @@
         <section id="sponsors" class="tab-content hidden">
             <h2>Sponsors</h2>
             <p>Learn more about the sponsors here!</p>
+            <h2>Platinum Sponsors</h2>
+            <h3>These companies have sponsored the event at the Platinum tier!</h3>
+            
+            <h2>Gold Sponsors</h2>
+            <h3>These companies have sponsored the event at the Gold tier!</h3>
+
+            <h2>Silver Sponsors</h2>
+            <h3>These companies have sponsored the event at the Silver tier!</h3>
+
+            <h2>Bronze Sponsors</h2>
+            <h3>These companies have sponsored the event at the Bronze tier!</h3>
         </section>
 
         <section id="conduct" class="tab-content hidden">
