--- a/index.html
+++ b/index.html
@@ -119,7 +119,15 @@
             <h2>Sponsors</h2>
             <p>Learn more about the sponsors here!</p>
             <h2>Platinum Sponsors</h2>
-            <h3>These companies have sponsored the event at the Platinum tier!</h3>
+            <p>These companies have sponsored the event at the Platinum tier!</p>
+            <h3>Romax</h3>
+            <ul>
+                <li>Experts in data management and mail campaigns.</li> 
+                <li>Offering smart solutions for customer communication problems!</li>
+                <li>Ambitious and forward-thinking company working with some of the best organisations in the world.</li>
+                <li> <a href="https://romax.co.uk/" target="_blank">Their website</a> </li>
+                <li> <a href="https://www.linkedin.com/company/romax-marketing-&-distribution-ltd/" target="_blank">Their LinkedIn Page</li>
+            </ul>
             
             <h2>Gold Sponsors</h2>
             <h3>These companies have sponsored the event at the Gold tier!</h3>
