--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <li>Offering smart solutions for customer communication problems!</li>
                 <li>Ambitious and forward-thinking company working with some of the best organisations in the world.</li>
                 <li> <a href="https://romax.co.uk/" target="_blank">Their website</a> </li>
-                <li> <a href="https://www.linkedin.com/company/romax-marketing-&-distribution-ltd/" target="_blank">Their LinkedIn Page</li>
+                <li> <a href="https://www.linkedin.com/company/romax-marketing-&-distribution-ltd/" target="_blank">Their LinkedIn Page</a> /li>
             </ul>
             
             <h2>Gold Sponsors</h2>
