--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
             <p>Learn about the amazing team behind Hackabury.</p> <!-- Descriptive paragraph for this section -->
             <h3>Benjamin</h3>
             <p>The one who created this website!</p>
+            <li> <a href="https://www.linkedin.com/in/benjamin-albert-100-ben" target="_blank">Their LinkedIn page</a> </li>
+            
             <h3>Jess</h3>
             <p>Helped with some of the functionality and quality of life improvements!</p>
         </section>
@@ -56,7 +58,7 @@
             <ul>
                 <li>Students need to complete the registration form by 5pm on 28th April 
                     (<a href="https://www.canterbury.ac.uk/events/2025/hackabury-cccus-hackathongamesjam" target="_blank">register here!</a>)</li>
-                <li>They will then be emailed further joining instructions.</li>
+                <li>They will then be emailed further joining instructions</li>
                 <li>Students can also join the Discord to chat in advance of the event.</li>
             </ul>
             
