--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <button class="tab-btn" data-tab="sponsors">Sponsors</button> <!-- Button to display 'Sponsors' section -->
             <button class="tab-btn" data-tab="conduct">Code of Conduct</button> <!-- Button to display 'Code of Conduct' section -->
             <button class="tab-btn" data-tab="timer">Countdown Timer</button> <!-- Button to display 'Timer' section -->
+            <button class="tab-btn" data-tab="devpost">Devpost</button> <!-- Button to display 'Devpost' section -->
         </nav>
     </header>
     <main> <!-- Main content section of the page -->
@@ -213,6 +214,13 @@
             <body>
                 <p id="demo"></p>
             </body>
+        </section>
+
+        <section id="devpost" class="tab-content hidden"> <!-- Content for the 'Devpost' section, initially hidden -->
+            <h2>What is Devpost?</h2>
+            <p>Devpost is a platform that helps software engineers participate in software competitions.</p>
+            <p>The home for hackathons, where organizations and developers come together to build, inspire, and innovate.</p>
+            <li> <a href="https://devpost.com/" target="_blank">Their website</a> </li>
         </section>
             
     </main>
