--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 
             <h4>What are the steps to register and participate?</h4>
             <ul>
-                <li>Students need to complete the registration form by 5pm on 28th April 
-                    (<a href="https://www.canterbury.ac.uk/events/2025/hackabury-cccus-hackathongamesjam" target="_blank">register here!</a>)</li>
-                <li>They will then be emailed further joining instructions</li>
+                <li>Students need to complete the registration form.
+                    (<a href="https://www.canterbury.ac.uk/events/2025/hackabury-cccus-hackathongamesjam" target="_blank">Register here!</a>)</li>
+                <li>They will then be emailed further joining instructions.</li>
                 <li>Students can also join the Discord to chat in advance of the event.</li>
             </ul>
             
