--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
             <h3>External Links:</h3>
             <ul>
-                <li>Sign up for Hackabury <a href="https://www.canterbury.ac.uk/events/2025/hackabury-cccus-hackathongamesjam">here</a> (Hurry, the deadline to sign up is the 28th April!!)</li>
+                <li>Sign up for Hackabury <a href="https://www.canterbury.ac.uk/events/2025/hackabury-cccus-hackathongamesjam">here</a> </li>
                 <li>Join the Hackabury Discord server <a href="https://discord.gg/NSSPksXeKz">here</a>.</li>
             </ul>
         </section>
