--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
             <p>These companies have sponsored Hackabury at the Platinum tier!</p>
             
             <h2>Romax</h2>
+            <img src="Romax - MemberWise.jpg" alt="Romax Logo">
             <ul>
                 <li>Experts in data management and mail campaigns.</li> 
                 <li>Offering smart solutions for customer communication problems!</li>
