--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <p>These companies have sponsored Hackabury at the Platinum tier!</p>
             
             <h2>Romax</h2>
-            <img src="Romax - MemberWise.jpg" alt="Romax Logo">
+            <img src="Romax - MemberWise.jpg" alt="Romax's Logo">
             <ul>
                 <li>Experts in data management and mail campaigns.</li> 
                 <li>Offering smart solutions for customer communication problems!</li>
@@ -139,6 +139,7 @@
             <p>These companies have sponsored Hackabury at the Gold tier!</p>
 
             <h2>Southeastern</h2>
+            <img src="SE logo.png" alt="Southeastern's Logo">
             <ul>
                 <li>One of Britain's busiest train operators, serving London, Kent and parts of East Sussex.</li>
                 <li>Named 'Great Place to Work' at the National Rail Awards and placed top of the Women in Transport Equity Index!</li>
@@ -151,6 +152,7 @@
             <p>These companies have sponsored Hackabury at the Silver tier!</p>
 
             <h2>Holiday Extras</h2>
+            <img src="HX logo.png" alt="Holiday Extras' Logo">
             <ul>
                 <li>UK travel tech company making journeys easier with smart solutions, like airport parking and hotels.</li>
                 <li>Surrounded by a team that's collaborative, ambitious, and here to share knowledge.</li>
@@ -160,6 +162,7 @@
             </ul>
 
             <h2>Wave Community Bank</h2>
+            <img src="WCB logo.png" alt="Wave Community Bank's Logo">
             <ul>
                 <li>Ethical and sustainable savings and loans co-operative, helping people manage their money.</li>
                 <li>Work in partnership with local communities and other statutory and non-statutory organisations!</li>
