--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <p>These companies have sponsored Hackabury at the Silver tier!</p>
 
             <h2>Holiday Extras</h2>
-            <img src="HX logo.png" alt="Holiday Extras' Logo">
+            <img src="HX logo.png" alt="Holiday Extras' Logo" width="500" height="600">
             <ul>
                 <li>UK travel tech company making journeys easier with smart solutions, like airport parking and hotels.</li>
                 <li>Surrounded by a team that's collaborative, ambitious, and here to share knowledge.</li>
