--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <p>These companies have sponsored Hackabury at the Silver tier!</p>
 
             <h2>Holiday Extras</h2>
-            <img src="HX logo.png" alt="Holiday Extras' Logo" width="500" height="600">
+            <img src="HX logo.png" alt="Holiday Extras' Logo" width="300" height="450">
             <ul>
                 <li>UK travel tech company making journeys easier with smart solutions, like airport parking and hotels.</li>
                 <li>Surrounded by a team that's collaborative, ambitious, and here to share knowledge.</li>
@@ -215,6 +215,7 @@
         <section id="timer" class="tab-content hidden">
             <h2>Countdown Timer</h2>
             <h3>How long until Hackabury begins?</h3>
+            <h3>Tuesday 27th May 2025 at 10am!</h3>
             <body>
                 <p id="demo"></p>
             </body>
