--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <p>These companies have sponsored Hackabury at the Platinum tier!</p>
             
             <h2>Romax</h2>
-            <img src="Romax - MemberWise.jpg" alt="Romax's Logo">
+            <img src="Romax - MemberWise.jpg" alt="Romax's Logo" width="355" height="80">
             <ul>
                 <li>Experts in data management and mail campaigns.</li> 
                 <li>Offering smart solutions for customer communication problems!</li>
@@ -152,7 +152,7 @@
             <p>These companies have sponsored Hackabury at the Silver tier!</p>
 
             <h2>Holiday Extras</h2>
-            <img src="HX logo.png" alt="Holiday Extras' Logo" width="300" height="450">
+            <img src="HX logo.png" alt="Holiday Extras' Logo" width="350" height="350">
             <ul>
                 <li>UK travel tech company making journeys easier with smart solutions, like airport parking and hotels.</li>
                 <li>Surrounded by a team that's collaborative, ambitious, and here to share knowledge.</li>
@@ -162,7 +162,7 @@
             </ul>
 
             <h2>Wave Community Bank</h2>
-            <img src="WCB logo.png" alt="Wave Community Bank's Logo">
+            <img src="WCB logo.png" alt="Wave Community Bank's Logo" width="355" height="170">
             <ul>
                 <li>Ethical and sustainable savings and loans co-operative, helping people manage their money.</li>
                 <li>Work in partnership with local communities and other statutory and non-statutory organisations!</li>
